# vector_c2l1

./: .gitignore  CMakeLists.txt  README.md  Vector.cpp  Vector.h  main.cpp  vector.h  vector_c2l1.sln  vector_c2l1.vcxproj
GoogleTests/: GoogleTests.vcxproj  test.cpp
